# chlaty-cli

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clean_artifact.sh  download_artifact.sh  stash.patch  tash.patch
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
plugins/manifest/: db  snap.00000000000000C0
src/: main.rs  search.rs
src/display/: get_episode_list_type.rs  mod.rs  search_type.rs
src/display/manage_plugin/: get_installed_plugin_list_type.rs  install_plugin_type.rs  mod.rs  remove_plugin_type.rs  update_plugin_type.rs
src/display/request_plugin/: get_episode_list_type.rs  get_episode_server_type.rs  mod.rs  search_type.rs
src/manage_player/: mod.rs
src/manage_plugin/: install_plugin.rs  mod.rs  remove_plugin.rs  update_all_plugin.rs  update_plugin.rs
src/request_plugin/: get_episode_list.rs  get_episode_server.rs  get_server.rs  mod.rs  search.rs
src/utils/: download.rs  download_player.rs  get_extension.rs  get_installed_player.rs  get_player.rs  install_player.rs  mod.rs  prompt_continue.rs
