[package]
name = "chlaty-cli"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3 
lto = true 
strip = true

[dependencies]
chlaty-core = { git = "https://github.com/chlaty/chlaty-core", branch = "main" }
reqwest = {version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"]}
clearscreen = "4.0.2"
colored = "3.0.0"
dotenv = "0.15.0"
figlet-rs = "0.1.5"
indicatif = "0.18.0"
inquire = "0.7.5"
semver = "1.0.26"
serde_json = "1.0.143"
tabled = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"
serde = "1.0.219"
sled = "0.34.7"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"